force-app/main/default/objects/SFDC_Company_Review__c/SFDC_Company_Review__c.object-meta.xml
<CustomObject>
    <description>Reviews performed on potential acqusiition candidates.</description>
    <label>Company Review</label>
    <nameField>
        <label>Company Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>