force-app/main/default/objects/SFDC_Company_Review__c/fields/Better_Fit_as_a_Partner__c.field-meta.xml
<CustomField>
    <fullName>Better_Fit_as_a_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Better Fit as a Partner</label>
    <type>Checkbox</type>
</CustomField>