force-app/main/default/objects/SFDC_Company_Review__c/fields/Building_Internally__c.field-meta.xml
<CustomField>
    <fullName>Building_Internally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Internally</label>
    <type>Checkbox</type>
</CustomField>