force-app/main/default/objects/SFDC_Company_Review__c/fields/Company_Prefers_Another_Acquiror__c.field-meta.xml
<CustomField>
    <fullName>Company_Prefers_Another_Acquiror__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Prefers Another Acquiror</label>
    <type>Checkbox</type>
</CustomField>