force-app/main/default/objects/SFDC_Company_Review__c/fields/Lack_of_Business_Model_Fit__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_Business_Model_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lack of Business Model Fit</label>
    <type>Checkbox</type>
</CustomField>