force-app/main/default/objects/SFDC_Company_Review__c/fields/Meeting_Call_Participants__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Call_Participants__c</fullName>
    <description>Who attended the meeting or phone conference</description>
    <label>Meeting/Call Participants</label>
    <type>TextArea</type>
</CustomField>