force-app/main/default/objects/SFDC_Company_Review__c/fields/Not_a_Strategic_Priority__c.field-meta.xml
<CustomField>
    <fullName>Not_a_Strategic_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not a Strategic Priority</label>
    <type>Checkbox</type>
</CustomField>