force-app/main/default/objects/SFDC_Company_Review__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>