force-app/main/default/objects/SFDC_Company_Review__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Still Researching</fullName>
            </value>
            <value>
                <fullName>Consider for an Acquisition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>