force-app/main/default/objects/SFDC_Company_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date the review is performed.</description>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>