force-app/main/default/objects/SFDC_Company_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that is performing the company review.</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Company_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>