force-app/main/default/objects/SFDC_Company_Review__c/fields/Target_Company__c.field-meta.xml
<CustomField>
    <fullName>Target_Company__c</fullName>
    <label>Target Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Company_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>