force-app/main/default/objects/SFDC_Company_Review__c/fields/Unfavorable_Location__c.field-meta.xml
<CustomField>
    <fullName>Unfavorable_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unfavorable Location</label>
    <type>Checkbox</type>
</CustomField>