force-app/main/default/objects/SFDC_Company_Review__c/fields/Valuation_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valuation Expectations</label>
    <type>Checkbox</type>
</CustomField>