force-app/main/default/objects/SFDC_Company_Review__c/fields/We_Prefer_Another_Target__c.field-meta.xml
<CustomField>
    <fullName>We_Prefer_Another_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>We Prefer Another Target</label>
    <type>Checkbox</type>
</CustomField>